--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>应用中心</title>
+        <script src="/setting.js"></script>
     </head>
     <body>
         <div id="app"></div>
